--- a/sentence_splitter/colabs/sentence_splitter_generative_eval.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_generative_eval.ipynb
@@ -177,12 +177,21 @@
     "        enable_thinking = False, # Disable thinking\n",
     "    )\n",
     "\n",
-    "    return model.generate(\n",
+    "    model.generate(\n",
     "        **tokenizer(question, return_tensors = \"pt\").to(\"cuda\"),\n",
     "        max_new_tokens = 512,\n",
     "        temperature = 0.7, top_p = 0.8, top_k = 20, # For non thinking\n",
     "        streamer = TextStreamer(tokenizer, skip_prompt = True),\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b66fd04",
+   "metadata": {},
+   "source": [
+    "Testing one model at the time (commenting the others) to avoid memory issues,\n",
+    "restarting the Kernel to free the GPU memory!"
    ]
   },
   {
@@ -192,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_model(\"Qwen3-4B-sentence-splitter\")"
+    "# test_model(\"qwen3-4b-unsloth-bnb-4bit-sentence-splitter\")"
    ]
   },
   {
@@ -202,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_model(\"Meta-Llama-3.1-8B-Instruct-sentence-splitter\")"
+    "# test_model(\"meta-llama-3.1-8b-instruct-unsloth-bnb-4bit-sentence-splitter\")"
    ]
   },
   {
@@ -212,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_model(\"mistral-7b-instruct-v0.3-bnb-4bit-sentence-splitter\")"
+    "# test_model(\"mistral-7b-instruct-v0.3-bnb-4bit-sentence-splitter\")"
    ]
   },
   {
