Finalize everything before the final correction

--- a/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
@@ -252,7 +252,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EMBEDDING_MODEL = \"bert-base-cased\"\n",
+    "EMBEDDING_MODEL = \"DeepMount00/ModernBERT-base-ita\"\n",
+    "MODEL_NAME = \"ModernBERT-base-ita\"\n",
     "\n",
     "model = AutoModelForTokenClassification.from_pretrained(EMBEDDING_MODEL, num_labels=2)"
    ]
@@ -332,14 +333,14 @@
    "source": [
     "# as naming convention we use the embedding model name + \"-sentence-splitter\"\n",
     "# in this way we can easily identify the model we used to train the sentence splitter\n",
-    "trained_model_name = EMBEDDING_MODEL + \"-sentence-splitter\"\n",
+    "trained_model_name = MODEL_NAME + \"-sentence-splitter\"\n",
     "\n",
     "training_arguments = TrainingArguments(\n",
     "    trained_model_name,\n",
     "    eval_strategy=\"epoch\",\n",
     "    save_strategy=\"epoch\",\n",
     "    learning_rate=2e-5,\n",
-    "    num_train_epochs=3,\n",
+    "    num_train_epochs=30,\n",
     "    weight_decay=0.01,\n",
     "    push_to_hub=True,\n",
     "    hub_token=os.environ['HF_TOKEN'],\n",
@@ -443,7 +444,7 @@
    "source": [
     "data_collator = DataCollatorForTokenClassification(tokenizer)\n",
     "\n",
-    "trainer = WeightedTrainer (\n",
+    "trainer = WeightedTrainer(\n",
     "    model=model,\n",
     "    args=training_arguments,\n",
     "    train_dataset=tokenized_dataset_dict[\"train\"],\n",
