Use Claude 4 sonnet to improve my poor English

--- a/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
@@ -321,7 +321,7 @@
     "\n",
     "The dataset is highly imbalanced: most labels are 0 and few are 1. Accuracy is not a suitable metric here—for example, predicting only 0 yields high accuracy.\n",
     "\n",
-    "We therefore select the best model by F1 on the validation set."
+    "We therefore select the best model based on F1 score on the validation set."
    ]
   },
   {
