--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "In this notebook we will evaluate the models we produced for sentence splitting,\n",
     "on the same domain (Quarantana - Manzoni) and out of domain (on novels from different authors of the same time).\n",
-    "We copied with a little adaptation from the golden splitting novels from [Sentence Splitting Manzoni annotated datset](https://github.com/RacheleSprugnoli/Sentence_Splitting_Manzoni/tree/main/test-novels).\n",
+    "We copied and slightly adapted the golden splitting novels from [Sentence Splitting Manzoni annotated dataset](https://github.com/RacheleSprugnoli/Sentence_Splitting_Manzoni/tree/main/test-novels).\n",
     "\n",
     "\n",
     "Install the required libraries in your virtual environment:"
@@ -84,7 +84,7 @@
    "id": "63e62fcc",
    "metadata": {},
    "source": [
-    "List the fine-tuned (besed on embedding models) models we want to test: "
+    "List the fine-tuned (based on embedding models) models we want to test: "
    ]
   },
   {
@@ -109,10 +109,10 @@
    "id": "67c1c14c",
    "metadata": {},
    "source": [
-    "We want evaluate the f1 score of the splitting prediction comparted.\n",
+    "We want to evaluate the f1 score of the splitting prediction compared.\n",
     "\n",
     "First of all, from a prediction and from a golden-annotated novel fragment we want to produce label.\n",
-    "The labels produced for the evaluation here are different from the ones are used to fine-tune the models:\n",
+    "The labels produced for the evaluation here are different from the ones used to fine-tune the models:\n",
     "for simplicity of the implementation we have a label for each character instead of a label for each token."
    ]
   },
