--- a/sentence_splitter/colabs/sentence_splitter_generative_eval.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_generative_eval.ipynb
@@ -46,7 +46,7 @@
    "id": "eeb35c8e",
    "metadata": {},
    "source": [
-    "Before proceeding, make the run as much deterministic as possible:"
+    "Before proceeding, make the run as deterministic as possible:"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "id": "fd5c468e",
    "metadata": {},
    "source": [
-    "Let's test (this time manually) how the trained LLM-based models performs on a given text\n",
+    "Let's test (this time manually) how the trained LLM-based models perform on a given text\n",
     "using an out of domain novel (Cuore)."
    ]
   },
@@ -190,7 +190,7 @@
    "id": "3b66fd04",
    "metadata": {},
    "source": [
-    "Testing one model at the time (commenting the others) to avoid memory issues,\n",
+    "Testing one model at a time (commenting the others) to avoid memory issues,\n",
     "restarting the Kernel to free the GPU memory!"
    ]
   },
