Evaluate test set

--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_test.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_test.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "13f8a965",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "0730e0bf",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "58225dfc",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "efaba64f",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "[1522 rows x 2 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "5e2b19a5",
    "metadata": {},
    "outputs": [
@@ -2915,7 +2915,7 @@
        "   0]]}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2926,11 +2926,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a6d0242",
+   "metadata": {},
+   "source": [
+    "We create a dataset from the grouped sequences. So that it can be reused."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d23c7727",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating parquet from Arrow format: 100%|██████████| 1/1 [00:00<00:00, 1807.11ba/s]\n",
+      "Uploading the dataset shards: 100%|██████████| 1/1 [00:01<00:00,  1.24s/it]\n",
+      "Generating test split: 100%|██████████| 7/7 [00:00<00:00, 2809.31 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "test_dataset = Dataset.from_dict(test_grouped)\n",
     "\n",
@@ -2939,32 +2957,27 @@
     "})\n",
     "\n",
     "# Optionally push the dataset to the hub.\n",
-    "# dataset_dict.push_to_hub(f\"fax4ever/manzoni-{SIZE}-test\", token=os.getenv(\"HF_TOKEN\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "30f7f650",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Generating test split: 100%|██████████| 7/7 [00:00<00:00, 2825.26 examples/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Alternatively, load the dataset from the hub.\n",
+    "dataset_dict.push_to_hub(f\"fax4ever/sentence-splitter-ood-{SIZE}\", token=os.getenv(\"HF_TOKEN\"))\n",
     "\n",
-    "dataset_dict = load_dataset(f\"fax4ever/manzoni-{SIZE}-test\")"
+    "# Alternatively, load the dataset from the hub.\n",
+    "dataset_dict = load_dataset(f\"fax4ever/sentence-splitter-ood-{SIZE}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dabe7c4",
+   "metadata": {},
+   "source": [
+    "Now we create two inference pipelines from the two models that worked best in out out of domain evaluations: Modern BERT ITA XXL and Electra ITA XXL\n",
+    "\n",
+    "We choose these models before to evaluate the F1 on the test set.\n",
+    "We choose those because they have the best F1 score on other datasets.\n",
+    "In this choise we didn't use in any way the labels of the test set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "3bf3c805",
    "metadata": {},
    "outputs": [
@@ -2972,18 +2985,53 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Device set to use cpu\n",
       "Device set to use cpu\n"
      ]
     }
    ],
    "source": [
-    "# We choose this model before to evaluate the F1 on the test set.\n",
-    "# We choose it because it has the best F1 score on other datasets.\n",
+    "modern_bert_model_name = \"bert-base-italian-xxl-cased-sentence-splitter\"\n",
+    "modern_bert_model_checkpoint = \"fax4ever/\" + modern_bert_model_name\n",
+    "modern_bert_inference_pipeline = pipeline(\"token-classification\", model=modern_bert_model_checkpoint, aggregation_strategy=\"simple\")\n",
     "\n",
-    "model_name = \"electra-base-italian-xxl-cased-discriminator-sentence-splitter\"\n",
-    "model_checkpoint = \"fax4ever/\" + model_name\n",
-    "inference_pipeline = pipeline(\"token-classification\", model=model_checkpoint, aggregation_strategy=\"simple\")"
+    "electra_model_name = \"electra-base-italian-xxl-cased-discriminator-sentence-splitter\"\n",
+    "electra_model_checkpoint = \"fax4ever/\" + electra_model_name\n",
+    "electra_inference_pipeline = pipeline(\"token-classification\", model=electra_model_checkpoint, aggregation_strategy=\"simple\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b22cf21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def words_to_sequence(words):\n",
+    "    input_text = \" \".join(words)\n",
+    "    input_text = input_text.replace(\" ,\", \",\")\n",
+    "    input_text = input_text.replace(\" .\", \".\")\n",
+    "    input_text = input_text.replace(\" ?\", \"?\")\n",
+    "    input_text = input_text.replace(\" !\", \"!\")\n",
+    "    input_text = input_text.replace(\" :\", \":\")\n",
+    "    input_text = input_text.replace(\" ;\", \";\")\n",
+    "    input_text = input_text.replace(\"' \", \"'\")\n",
+    "    return input_text\n",
+    "\n",
+    "for batch in dataset_dict[\"test\"].iter(batch_size=1):\n",
+    "    words = batch[\"tokens\"][0]\n",
+    "    labels = batch[\"labels\"][0]\n",
+    "    sequence = words_to_sequence(words)\n",
+    "    print(sequence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "169a10fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
