Complete test set evaluation (embedding models)

--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_generative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_generative.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "!pip install --upgrade pip\n",
-    "!pip install transformers evaluate"
+    "!pip install transformers evaluate torch numpy pandas datasets jupyter unsloth"
    ]
   },
   {
