--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2c58f4e8",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
    ],
    "source": [
     "!pip install --upgrade pip\n",
-    "!pip install transformers evaluate"
+    "!pip install transformers evaluate torch ipywidgets scikit-learn"
    ]
   },
   {
