Generative inference test set

--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_generative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_generative.ipynb
@@ -114,62 +114,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fd5c468e",
-   "metadata": {},
-   "source": [
-    "Let's test (this time manually) how the trained LLM-based models perform on a given text\n",
-    "using an out of domain novel (Cuore)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72ce7b9e",
+   "id": "c920f111",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_text = \"\"\"Non era un legno di lusso, ma un semplice pezzo\n",
-    "da catasta, di quelli che d’inverno si mettono nelle\n",
-    "stufe e nei caminetti per accendere il fuoco e per riscaldare le stanze.\n",
-    "Non so come andasse, ma il fatto gli è che un bel\n",
-    "giorno questo pezzo di legno capitò nella bottega\n",
-    "di un vecchio falegname, il quale aveva nome mastr’Antonio, se non che tutti lo chiamavano maestro\n",
-    "Ciliegia, per via della punta del suo naso, che era\n",
-    "sempre lustra e paonazza, come una ciliegia matura.\n",
-    "Appena maestro Ciliegia ebbe visto quel pezzo di\n",
-    "legno, si rallegrò tutto; e dandosi una fregatina di\n",
-    "mani per la contentezza, borbottò a mezza voce:\n",
-    "\"Questo legno è capitato a tempo; voglio servirmene per fare una gamba di tavolino.\" \n",
-    "\"\"\"\n",
-    "input_text = input_text.splitlines()\n",
-    "input_text = \" \".join(input_text)\n",
-    "input_text"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7e84ec7d",
-   "metadata": {},
-   "source": [
-    "Each model is loaded from Hugging Face and used to generate the answer."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04e1cbfb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_model(name):\n",
+    "def load_model(model_name):\n",
     "    model, tokenizer = FastLanguageModel.from_pretrained(\n",
-    "        'fax4ever/' + name, \n",
+    "        'fax4ever/' + model_name, \n",
     "        load_in_4bit=True, \n",
     "        dtype=None, \n",
     "        max_seq_length=512\n",
     "    )\n",
     "    model = FastLanguageModel.for_inference(model)\n",
+    "    return model, tokenizer    \n",
+    "\n",
+    "def use_model(model, tokenizer, input_text):\n",
     "    question = tokenizer.apply_chat_template(\n",
     "        [Prompt(input_text).question()], \n",
     "        tokenize = False,\n",
@@ -187,51 +148,61 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b66fd04",
+   "id": "4eb7eb3e",
    "metadata": {},
    "source": [
-    "Testing one model at a time (commenting the others) to avoid memory issues,\n",
-    "restarting the Kernel to free the GPU memory!"
+    "The LLM-based models we fine tuned are:\n",
+    "\n",
+    "1. Minerva-7B-instruct-v1.0-sentence-splitter\n",
+    "2. qwen3-4b-unsloth-bnb-4bit-sentence-splitter\n",
+    "3. mistral-7b-instruct-v0.3-bnb-4bit-sentence-splitter\n",
+    "4. meta-llama-3.1-8b-instruct-unsloth-bnb-4bit-sentence-splitter"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82e1e047",
+   "id": "e4b598b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test_model(\"qwen3-4b-unsloth-bnb-4bit-sentence-splitter\")"
+    "model, tokenizer = load_model(\"Minerva-7B-instruct-v1.0-sentence-splitter\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17bc3184",
+   "id": "5f3e26b3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test_model(\"meta-llama-3.1-8b-instruct-unsloth-bnb-4bit-sentence-splitter\")"
+    "dataset_dict = load_dataset(f\"fax4ever/sentence-splitter-ood-192\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74a1f19e",
+   "id": "8737ad29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test_model(\"mistral-7b-instruct-v0.3-bnb-4bit-sentence-splitter\")"
+    "def words_to_sequence(words):\n",
+    "    return \" \".join(words)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a90024bf",
+   "id": "29a2231e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_model(\"Minerva-7B-instruct-v1.0-sentence-splitter\")"
+    "for batch in dataset_dict[\"test\"].iter(batch_size=1):\n",
+    "    words = batch[\"tokens\"][0]\n",
+    "    golden_labels = batch[\"labels\"][0]\n",
+    "\n",
+    "    output_text = use_model(model, tokenizer, words_to_sequence(words))\n",
+    "    print(output_text)"
    ]
   }
  ],
